# qserver

./: CMakeLists.txt
qclient/: CMakeLists.txt  client  client.c
qclientpp/: CMakeLists.txt  qclient.cpp  qclient.h
qserver/: CMakeLists.txt  qserver  qserver.c  qserver.cpp  qserver.h
